--- a/packages/cursorless-org-docs/src/docs/user/release-notes/0.29.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/0.29.0.md
@@ -43,7 +43,7 @@ It's unfortunate that we don't record our Discord sessions, because the discussi
 
 ### Strange Loop 2023
 
-ICYMI Cursorless went to Strange Loop. The talk was so wild that they had to close Strange Loop forever. Sorry. I really liked Strange Loop too. Here's the talk ([video 🎬](https://youtu.be/NcUJnmBqHTY)); I think it's a nice way to understand the concepts underlying Cursorless. Its Platonic form, if you will. And I really hope that you will.
+ICYMI Cursorless went to Strange Loop. The talk was so wild that they had to close Strange Loop forever. Sorry. I really liked Strange Loop too. Here's the talk ([video 🎬](https://youtu.be/NcUJnmBqHTY)); I think it's a nice way to understand the concepts underlying Cursorless -- its platonic form, if you will. (And I really hope that you will.)
 
 ### Improved Talon-side API
 
