--- a/packages/cursorless-org-docs/src/docs/user/release-notes/0.29.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/0.29.0.md
@@ -57,7 +57,7 @@ The keyboard interface continues to grow and is getting close to feature-parity 
 
 ### Falling back
 
-You know when you're in a text box or the VSCode integrated terminal and you're like "Man, I wish I could bring that line right to my cursor"? Do it. Go on. `"bring line air"`. You can also use some hatless Cursorless commands on your cursor in that text box (`"take token"`, `"copy two tokens backward"`, etc etc etc 🙄)
+You know when you're in a text box or the VSCode integrated terminal and you're like "Man, I wish I could bring that line right to my cursor"? Do it. Go on. `"bring line air"`. You can also use some hatless Cursorless commands on your cursor in that text box (`"quad wrap token"`, `"copy two tokens backward"`, `"chuck third previous paint"`, etc etc etc nbd 🙄)
 
 ### Cursorless sidebar
 
