--- a/packages/cursorless-org-docs/src/docs/user/release-notes/0.28.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/0.28.0.md
@@ -1,9 +1,12 @@
 ---
 version: "0.28.0"
-releaseDate: "2023-09-01"
+release_date: "2023-09-01"
+sidebar_position: -2
 ---
 
 # Release Notes for 0.28.0
+
+Published Sep 1, 2023.
 
 ## Preamble
 
