--- a/packages/cursorless-org-docs/src/docs/user/release-notes/0.29.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/0.29.0.md
@@ -1,13 +1,16 @@
 ---
 version: "0.29.0"
-releaseDate: "2024-08-02"
+release_date: "2024-08-02"
+sidebar_position: -3
 ---
 
 # Release Notes for 0.29.0
 
+Published Aug 2, 2024
+
 ## Preamble
 
-Welcome to the last pre-1.0 Cursorless release notes! As you may or may not already know, Cursorless is all-in on continuous delivery, so you get features as soon as they hit `main`. But to keep up the 🙌🎉🎸 around releases and to give you that which you already have but do not know, we now do release notes. If you like what we've been up to, consider [sponsoring the project](https://github.com/sponsors/pokey) so we can afford the legal bills when Netflix sues me for the Law of Surprise reference above.
+Welcome to the last pre-1.0 Cursorless release notes! The last 11 months have flown by since our [last release notes](./0.28.0.md). As you may or may not already know, Cursorless is all-in on continuous delivery, so you get features as soon as they hit `main`. But to keep up the 🙌🎉🎸 around releases and to give you that which you already have but do not know, we now do release notes. If you like what we've been up to, consider [sponsoring the project](https://github.com/sponsors/pokey) so we can afford the legal bills when Netflix sues me for the Witcher Law of Surprise reference above.
 
 Given we don't actually have "releases" (cf continuous delivery above), we're arbitrarily considering everything merged since [the last "release"](./0.28.0.md) to be part of this one.
 
@@ -25,7 +28,7 @@ In addition to migrating old scopes, we added a couple new languages: yaml and l
 
 ### New modifiers
 
-Everyone loves `"take two tokens"`, `"chuck next two lines"`, and `"bring air to every instance two tokens bat"` (maybe that last one is just me?). What everyone doesn't love is saying `"pre two lines air"` and wondering why you end up with one cursor at the start of line `"air"`. Well allow me to introduce you to the new, more powerful `"every"` modifier. You can now put an `"every"` in front of any modifier that refers to multiple scopes, and instead of constructing a range from the first to the last, Cursorless will let you target them individually. So `"take every two tokens"` will give you two selections, `"pre every two lines air"` will give you cursors at the start of those two lines, and `"ski wrap every three strings air"` is how I wrapped the first three commands in this paragraph backticks when I realised I forgot to give them styling.
+Everyone loves `"take two tokens"`, `"chuck next two lines"`, and `"bring air to every instance two tokens bat"` (maybe that last one is just me?). What everyone doesn't love is saying `"pre two lines air"` and wondering why you end up with one cursor at the start of line `"air"`. Well allow me to introduce you to the new, more powerful `"every"` modifier. You can now put an `"every"` in front of any modifier that refers to multiple scopes, and instead of constructing a range from the first to the last, Cursorless will let you target them individually. So `"take every two tokens"` will give you two selections, `"pre every two lines air"` will give you cursors at the start of those two lines, and `"ski wrap every three strings air"` is how I wrapped the first three commands in this paragraph with backticks when I realised I forgot to give them styling.
 
 ### Interactive tutorials
 
@@ -39,7 +42,7 @@ We also have an internal experiment with a version of Cursorless that runs liter
 
 ### New hat shapes
 
-It's unfortunate that we don't record our Discord sessions, because the discussions about the new hat shapes would make fantastic examples for the Wikipedia page on [bike-shedding](https://en.wikipedia.org/wiki/Law_of_triviality). I'm really happy with how they turned out. Except for fox. Such a shame about that pixel.
+It's unfortunate that we don't record our Discord sessions, because the discussions about the hat shapes we shipped late last year ([#1868](https://github.com/cursorless-dev/cursorless/pull/1868)) would make fantastic examples for the Wikipedia page on [bike-shedding](https://en.wikipedia.org/wiki/Law_of_triviality). I'm really happy with how they turned out. Except for fox. Such a shame about that pixel.
 
 ### Strange Loop 2023
 
