--- a/data/fixtures/recorded/languages/clojure/clearItem.yml
+++ b/data/fixtures/recorded/languages/clojure/clearItem.yml
@@ -26,8 +26,11 @@ initialState:
 finalState:
   documentContents: |-
     {
-        
+        :bongo {
+            :foo "bar",
+            ,
+        }
     }
   selections:
-    - anchor: {line: 1, character: 4}
-      active: {line: 1, character: 4}
+    - anchor: {line: 3, character: 8}
+      active: {line: 3, character: 8}
