--- a/data/fixtures/recorded/languages/yaml/chuckItem11.yml
+++ b/data/fixtures/recorded/languages/yaml/chuckItem11.yml
@@ -19,8 +19,7 @@ initialState:
       active: {line: 1, character: 2}
   marks: {}
 finalState:
-  documentContents: |
-    foo:
+  documentContents: "foo:"
   selections:
-    - anchor: {line: 1, character: 0}
-      active: {line: 1, character: 0}
+    - anchor: {line: 0, character: 4}
+      active: {line: 0, character: 4}
