--- a/data/fixtures/recorded/languages/rust/chuckState.yml
+++ b/data/fixtures/recorded/languages/rust/chuckState.yml
@@ -18,8 +18,7 @@ initialState:
       active: {line: 0, character: 10}
   marks: {}
 finalState:
-  documentContents: |+
-
+  documentContents: ""
   selections:
     - anchor: {line: 0, character: 0}
       active: {line: 0, character: 0}
