--- a/data/fixtures/recorded/languages/rust/chuckTypeMade.yml
+++ b/data/fixtures/recorded/languages/rust/chuckTypeMade.yml
@@ -30,12 +30,10 @@ initialState:
       start: {line: 4, character: 0}
       end: {line: 4, character: 4}
 finalState:
-  documentContents: |+
+  documentContents: |
     trait T {
         fn f();
     }
-
-
   selections:
-    - anchor: {line: 4, character: 0}
-      active: {line: 4, character: 0}
+    - anchor: {line: 3, character: 0}
+      active: {line: 3, character: 0}
