--- a/data/fixtures/recorded/languages/php/ifWrapThis.yml
+++ b/data/fixtures/recorded/languages/php/ifWrapThis.yml
@@ -9,6 +9,7 @@ command:
       type: primitive
       mark: {type: cursor}
   usePrePhraseSnapshot: false
+spokenFormError: named wrap with snippet
 initialState:
   documentContents: |-
     <?php
@@ -18,13 +19,4 @@ initialState:
     - anchor: {line: 2, character: 7}
       active: {line: 2, character: 7}
   marks: {}
-finalState:
-  documentContents: |-
-    <?php
-
-    if () {
-        $foo = "Hello world";
-    }
-  selections:
-    - anchor: {line: 2, character: 4}
-      active: {line: 2, character: 4}
+thrownError: {name: Error}
