--- a/data/fixtures/recorded/languages/php/tryWrapThis2.yml
+++ b/data/fixtures/recorded/languages/php/tryWrapThis2.yml
@@ -9,6 +9,7 @@ command:
       type: primitive
       mark: {type: cursor}
   usePrePhraseSnapshot: false
+spokenFormError: named wrap with snippet
 initialState:
   documentContents: |-
     <?php
@@ -24,25 +25,4 @@ initialState:
     - anchor: {line: 6, character: 0}
       active: {line: 6, character: 0}
   marks: {}
-finalState:
-  documentContents: |-
-    <?php
-
-    try {
-        if (true) {
-            $foo = "Hello world";
-        }
-    } catch () {
-        
-    }
-
-    try {
-        $bar = 42;
-    } catch () {
-        
-    }
-  selections:
-    - anchor: {line: 6, character: 9}
-      active: {line: 6, character: 9}
-    - anchor: {line: 12, character: 9}
-      active: {line: 12, character: 9}
+thrownError: {name: Error}
