--- a/packages/cursorless-org-docs/src/docs/user/languages/dart.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/dart.mdx
@@ -1,5 +1,5 @@
-import Language from "./Language";
+import { Language } from "./components/Language";
 
-# dart
+# Dart
 
 <Language languageId="dart"></Language>
