--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.md
@@ -1,19 +1,26 @@
 ---
 version: "1.0"
 release_date: "2025-03-04"
+sidebar_position: -4
 ---
 
 # Release Notes for 1.0
 
 Cursorless if finally ready for its 1.0 release!
 
-Over the last year the Cursorless team has focused primarily on the user experience and migrating legacy language scopes. We are now at a point where we feel Cursorless is ready for its first official release.
+Over the last year the Cursorless team has focused primarily on the user experience and migrating legacy language scopes. During 2024 we merged [299 PRs](https://github.com/cursorless-dev/cursorless/pulls?q=merged%3A2024+sort%3Aupdated-asc+) and so far during 2025 [100+ PRs](https://github.com/cursorless-dev/cursorless/pulls?q=merged%3A2025+sort%3Aupdated-asc+). We are now at a point where we feel Cursorless is ready for its first official release.
 
 Here are a few highlights of the things we have done / achieved:
 
 - Added a Cursorless tutorial in vscode
 - Simplify the installation process by notifying a user if they are missing essential features like Talon or the command server.
-- Migrated all the text based scopes and most of the language specific ones from our old legacy definitions to use tree sitter queries. You can now say things like `"take two items"`.
+- Migrated all the text based scopes and most of the language specific ones from our old legacy definitions to use our next-gen gen scope definitions. You can now say things like `"take two items"`.
 - Deprecated the Cursorless snippets in favor of the community snippets
 - We now have over 10000! tests in total. Testing everything from actions and scopes to the Talon grammar.
 - We have also added more actions, modifiers, scopes support for more languages, fixed bugs and so on.
+
+## What's next?
+
+- We will continue to improve language definitions. There are still some languages where features are missing or still in legacy.
+- Improving documentation. This is an area where we would really appreciate contributions.
+- Cursorless everywhere. We now have users working on Cursorless for multiple new editors. The future for Cursorless everywhere is really interesting.
