added snippet  link

--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.md
@@ -15,8 +15,8 @@ Here are a few highlights of the things we have done / achieved:
 - Added a Cursorless tutorial in vscode
 - Simplify the installation process by notifying a user if they are missing essential features like Talon or the command server.
 - Migrated all the text based scopes and most of the language specific ones from our old legacy definitions to use our next-gen gen scope definitions. You can now say things like `"take two items"`.
-- Deprecated the Cursorless snippets in favor of the community snippets
-- We now have over 10000! tests in total. Testing everything from actions and scopes to the Talon grammar.
+- Deprecated the Cursorless snippets in favor of the [community snippets](https://github.com/talonhub/community/tree/f7e5f9696c7ed6e78e8488c8b7fb1c6bbcc25779/core/snippets)
+- We now have over `10 000`! tests in total. Testing everything from actions and scopes to the Talon grammar.
 - We have also added more actions, modifiers, scopes support for more languages, fixed bugs and so on.
 
 ## What's next?
