--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.md
@@ -13,8 +13,8 @@ Over the last year the Cursorless team has focused primarily on the user experie
 Here are a few highlights of the things we have done / achieved:
 
 - Added a Cursorless tutorial in vscode
-- Simplify the installation process by notifying a user if they are missing essential features like Talon or the command server.
-- Migrated all the text based scopes and most of the language specific ones from our old legacy definitions to use our next-gen gen scope definitions. You can now say things like `"take two items"`.
+- Simplify the installation process by notifying the user if they are missing essential features like Talon or the command server.
+- Migrated all the text based scopes and most of the language specific ones from our old legacy definitions to use next-gen gen scope definitions. You can now say things like `"take two items"`.
 - Deprecated the Cursorless snippets in favor of the [community snippets](https://github.com/talonhub/community/tree/f7e5f9696c7ed6e78e8488c8b7fb1c6bbcc25779/core/snippets)
 - We now have over `10 000`! tests in total. Testing everything from actions and scopes to the Talon grammar.
 - We have also added more actions, modifiers, scopes support for more languages, fixed bugs and so on.
@@ -22,5 +22,5 @@ Here are a few highlights of the things we have done / achieved:
 ## What's next?
 
 - We will continue to improve language definitions. There are still some languages where features are missing or still in legacy.
-- Improving documentation. This is an area where we would really appreciate contributions.
+- Improving documentation. This is an area where we would really appreciate [contributions](https://github.com/cursorless-dev/cursorless/issues?q=is%3Aissue%20state%3Aopen%20label%3Adocumentation).
 - Cursorless everywhere. We now have users working on Cursorless for multiple new editors. The future for Cursorless everywhere is really interesting.
