--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.md
@@ -6,21 +6,51 @@ sidebar_position: -4
 
 # Release Notes for 1.0
 
-Cursorless if finally ready for its 1.0 release!
+_Published March 4, 2025_
 
-Over the last year the Cursorless team has focused primarily on the user experience and migrating legacy language scopes. During 2024 we merged [299 PRs](https://github.com/cursorless-dev/cursorless/pulls?q=merged%3A2024+sort%3Aupdated-asc+) and so far during 2025 [100+ PRs](https://github.com/cursorless-dev/cursorless/pulls?q=merged%3A2025+sort%3Aupdated-asc+). We are now at a point where we feel Cursorless is ready for its first official release.
+## Preamble
 
-Here are a few highlights of the things we have done / achieved:
+Cursorless is finally ready for its 1.0 release! 🎉
 
-- Added a Cursorless tutorial in vscode
-- Simplify the installation process by notifying the user if they are missing essential features like Talon or the command server.
-- Migrated all the text based scopes and most of the language specific ones from our old legacy definitions to use next-gen gen scope definitions. You can now say things like `"take two items"`.
+Over the last year, the Cursorless team has focused primarily on improving the user experience and migrating legacy language scopes. During 2024 we merged [299 PRs](https://github.com/cursorless-dev/cursorless/pulls?q=merged%3A2024+sort%3Aupdated-asc+) and so far during 2025 [100+ PRs](https://github.com/cursorless-dev/cursorless/pulls?q=merged%3A2025+sort%3Aupdated-asc+). We are now at a point where we feel Cursorless is ready for its first official release.
+
+## The subject at hand
+
+Here are the highlights of what we've accomplished:
+
+### Improved user experience
+
+- Added a Cursorless tutorial in VSCode to help new users get started quickly
+- Simplified the installation process by notifying users if they're missing essential features like Talon or the command server
+- Improved error messages and feedback throughout the extension
+
+### Next-gen scope definitions
+
+- Migrated all text-based scopes and most language-specific ones from our legacy definitions to next-gen scope definitions
+- You can now use more natural commands like `"take two items"` and work with collection scopes
+- Added support for more programming languages, with continued improvements to existing ones
+
+### Community integration
+
 - Deprecated the Cursorless snippets in favor of the [community snippets](https://github.com/talonhub/community/tree/f7e5f9696c7ed6e78e8488c8b7fb1c6bbcc25779/core/snippets)
-- We now have over `10 000`! tests in total. Testing everything from actions and scopes to the Talon grammar.
-- We have also added more actions, modifiers, scopes support for more languages, fixed bugs and so on.
+- Improved integration with Talon and other voice coding tools
 
-## What's next?
+### Stability and testing
 
-- We will continue to improve language definitions. There are still some languages where features are missing or still in legacy.
-- Improving documentation. This is an area where we would really appreciate [contributions](https://github.com/cursorless-dev/cursorless/issues?q=is%3Aissue%20state%3Aopen%20label%3Adocumentation).
-- Cursorless everywhere. We now have users working on Cursorless for multiple new editors. The future for Cursorless everywhere is really interesting.
+- We now have over 10,000 tests in total, testing everything from actions and scopes to the Talon grammar
+- Significantly improved stability and performance across the board
+- Fixed numerous bugs and edge cases reported by users
+
+### New features
+
+- Added more actions, modifiers, and scope types
+- Extended language support to cover more programming paradigms
+- Improved visualizations and feedback for Cursorless commands
+
+## 📈 What's next?
+
+- We will continue to improve language definitions. There are still some languages where features are missing or still in legacy form
+- Improving documentation. This is an area where we would really appreciate [contributions](https://github.com/cursorless-dev/cursorless/issues?q=is%3Aissue%20state%3Aopen%20label%3Adocumentation)
+- Cursorless everywhere. We now have users working on Cursorless for multiple new editors. The future for Cursorless everywhere is looking very bright
+
+We'd like to end with a massive thank you to [our sponsors 🎉](https://github.com/sponsors/pokey), without whom Cursorless development would not be possible!
