Add PR links to 1.0.0 release notes
Co-Authored-By: sketch

--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.0.md
@@ -20,32 +20,48 @@ Here are the highlights of what we've accomplished:
 
 ### Improved user experience
 
-- Added a Cursorless tutorial in VSCode to help new users get started quickly
-- Simplified the installation process by notifying users if they're missing essential features like Talon or the command server
-- Improved error messages and feedback throughout the extension
+- Added a Cursorless tutorial in VSCode to help new users get started quickly ([#360](https://github.com/cursorless-dev/cursorless/pull/360), [#2543](https://github.com/cursorless-dev/cursorless/pull/2543), [#2525](https://github.com/cursorless-dev/cursorless/pull/2525))
+- Simplified the installation process by notifying users if they're missing essential features like Talon or the command server ([#2720](https://github.com/cursorless-dev/cursorless/pull/2720), [#2061](https://github.com/cursorless-dev/cursorless/pull/2061))
+- Improved error messages and feedback throughout the extension ([#2861](https://github.com/cursorless-dev/cursorless/pull/2861), [#2755](https://github.com/cursorless-dev/cursorless/pull/2755), [#2740](https://github.com/cursorless-dev/cursorless/pull/2740))
 
 ### Next-gen scope definitions
 
-- Migrated all text-based scopes and most language-specific ones from our legacy definitions to next-gen scope definitions
-- You can now use more natural commands like `"take two items"` and work with collection scopes
-- Added support for more programming languages, with continued improvements to existing ones
+- Migrated all text-based scopes and most language-specific ones from our legacy definitions to next-gen scope definitions ([#2776](https://github.com/cursorless-dev/cursorless/pull/2776), [#2814](https://github.com/cursorless-dev/cursorless/pull/2814), [#2770](https://github.com/cursorless-dev/cursorless/pull/2770), [#2757](https://github.com/cursorless-dev/cursorless/pull/2757))
+- You can now use more natural commands like `"take two items"` and work with collection scopes ([#2773](https://github.com/cursorless-dev/cursorless/pull/2773), [#2765](https://github.com/cursorless-dev/cursorless/pull/2765))
+- Added support for more programming languages, with continued improvements to existing ones:
+  - JavaScript ([#2827](https://github.com/cursorless-dev/cursorless/pull/2827), [#2769](https://github.com/cursorless-dev/cursorless/pull/2769))
+  - Python ([#2829](https://github.com/cursorless-dev/cursorless/pull/2829))
+  - Java ([#2845](https://github.com/cursorless-dev/cursorless/pull/2845))
+  - YAML ([#2855](https://github.com/cursorless-dev/cursorless/pull/2855))
+  - JSON ([#2847](https://github.com/cursorless-dev/cursorless/pull/2847))
+  - Markdown ([#2848](https://github.com/cursorless-dev/cursorless/pull/2848), [#2775](https://github.com/cursorless-dev/cursorless/pull/2775))
+  - HTML ([#2851](https://github.com/cursorless-dev/cursorless/pull/2851))
+  - XML ([#2852](https://github.com/cursorless-dev/cursorless/pull/2852))
+  - TypeScript ([#2756](https://github.com/cursorless-dev/cursorless/pull/2756))
 
 ### Community integration
 
-- Deprecated the Cursorless snippets in favor of the [community snippets](https://github.com/talonhub/community/tree/f7e5f9696c7ed6e78e8488c8b7fb1c6bbcc25779/core/snippets)
-- Improved integration with Talon and other voice coding tools
+- Deprecated the Cursorless snippets in favor of the [community snippets](https://github.com/talonhub/community/tree/f7e5f9696c7ed6e78e8488c8b7fb1c6bbcc25779/core/snippets) ([#2804](https://github.com/cursorless-dev/cursorless/pull/2804), [#2747](https://github.com/cursorless-dev/cursorless/pull/2747), [#2744](https://github.com/cursorless-dev/cursorless/pull/2744))
+- Added migration tools and instructions for users to switch to community snippets ([#2857](https://github.com/cursorless-dev/cursorless/pull/2857), [#2837](https://github.com/cursorless-dev/cursorless/pull/2837), [#2833](https://github.com/cursorless-dev/cursorless/pull/2833))
+- Improved integration with Talon and other voice coding tools ([#2824](https://github.com/cursorless-dev/cursorless/pull/2824), [#2849](https://github.com/cursorless-dev/cursorless/pull/2849))
 
 ### Stability and testing
 
 - We now have over 10,000 tests in total, testing everything from actions and scopes to the Talon grammar
+- Improved test infrastructure and reporting ([#2818](https://github.com/cursorless-dev/cursorless/pull/2818), [#2809](https://github.com/cursorless-dev/cursorless/pull/2809), [#2854](https://github.com/cursorless-dev/cursorless/pull/2854))
 - Significantly improved stability and performance across the board
-- Fixed numerous bugs and edge cases reported by users
+- Fixed numerous bugs and edge cases reported by users ([#2740](https://github.com/cursorless-dev/cursorless/pull/2740), [#2755](https://github.com/cursorless-dev/cursorless/pull/2755), [#2806](https://github.com/cursorless-dev/cursorless/pull/2806))
 
 ### New features
 
-- Added more actions, modifiers, and scope types
-- Extended language support to cover more programming paradigms
-- Improved visualizations and feedback for Cursorless commands
+- Added more actions, modifiers, and scope types:
+  - Flash targets action ([#2764](https://github.com/cursorless-dev/cursorless/pull/2764), [#2722](https://github.com/cursorless-dev/cursorless/pull/2722))
+  - Select new targets action ([#2707](https://github.com/cursorless-dev/cursorless/pull/2707))
+  - Support for "grand grand scope" ([#2773](https://github.com/cursorless-dev/cursorless/pull/2773))
+  - Improved head/tail modifiers ([#2799](https://github.com/cursorless-dev/cursorless/pull/2799))
+  - New "inside" scope type ([#2776](https://github.com/cursorless-dev/cursorless/pull/2776))
+- Extended language support to cover more programming paradigms ([#2756](https://github.com/cursorless-dev/cursorless/pull/2756), [#2769](https://github.com/cursorless-dev/cursorless/pull/2769))  
+- Improved visualizations and feedback for Cursorless commands ([#2771](https://github.com/cursorless-dev/cursorless/pull/2771), [#2764](https://github.com/cursorless-dev/cursorless/pull/2764))
 
 ## 📈 What's next?
 
