--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.0.md
@@ -1,12 +1,12 @@
 ---
 version: "1.0.0"
-release_date: "2025-03-04"
+release_date: "2025-04-05"
 sidebar_position: -4
 ---
 
 # Release Notes for 1.0.0
 
-_Published March 4, 2025_
+_Published April 5, 2025_
 
 ## Preamble
 
@@ -20,9 +20,8 @@ Here are the highlights of what we've accomplished:
 
 ### Improved user experience
 
-- Added a Cursorless tutorial in VSCode to help new users get started quickly ([#360](https://github.com/cursorless-dev/cursorless/pull/360), [#2543](https://github.com/cursorless-dev/cursorless/pull/2543), [#2525](https://github.com/cursorless-dev/cursorless/pull/2525))
 - Simplified the installation process by notifying users if they're missing essential features like Talon or the command server ([#2720](https://github.com/cursorless-dev/cursorless/pull/2720), [#2061](https://github.com/cursorless-dev/cursorless/pull/2061))
-- Improved error messages and feedback throughout the extension ([#2861](https://github.com/cursorless-dev/cursorless/pull/2861), [#2755](https://github.com/cursorless-dev/cursorless/pull/2755), [#2740](https://github.com/cursorless-dev/cursorless/pull/2740))
+- Improved error messages and feedback throughout the extension ([#2861](https://github.com/cursorless-dev/cursorless/pull/2861), [#2755](https://github.com/cursorless-dev/cursorless/pull/2755))
 
 ### Next-gen scope definitions
 
@@ -50,18 +49,15 @@ Here are the highlights of what we've accomplished:
 - We now have over 10,000 tests in total, testing everything from actions and scopes to the Talon grammar
 - Improved test infrastructure and reporting ([#2818](https://github.com/cursorless-dev/cursorless/pull/2818), [#2809](https://github.com/cursorless-dev/cursorless/pull/2809), [#2854](https://github.com/cursorless-dev/cursorless/pull/2854))
 - Significantly improved stability and performance across the board
-- Fixed numerous bugs and edge cases reported by users ([#2740](https://github.com/cursorless-dev/cursorless/pull/2740), [#2755](https://github.com/cursorless-dev/cursorless/pull/2755), [#2806](https://github.com/cursorless-dev/cursorless/pull/2806))
+- Fixed numerous bugs and edge cases reported by users ([#2740](https://github.com/cursorless-dev/cursorless/pull/2740), [#2806](https://github.com/cursorless-dev/cursorless/pull/2806))
 
 ### New features
 
 - Added more actions, modifiers, and scope types:
   - Flash targets action ([#2764](https://github.com/cursorless-dev/cursorless/pull/2764), [#2722](https://github.com/cursorless-dev/cursorless/pull/2722))
   - Select new targets action ([#2707](https://github.com/cursorless-dev/cursorless/pull/2707))
-  - Support for "grand grand scope" ([#2773](https://github.com/cursorless-dev/cursorless/pull/2773))
   - Improved head/tail modifiers ([#2799](https://github.com/cursorless-dev/cursorless/pull/2799))
-  - New "inside" scope type ([#2776](https://github.com/cursorless-dev/cursorless/pull/2776))
-- Extended language support to cover more programming paradigms ([#2756](https://github.com/cursorless-dev/cursorless/pull/2756), [#2769](https://github.com/cursorless-dev/cursorless/pull/2769))  
-- Improved visualizations and feedback for Cursorless commands ([#2771](https://github.com/cursorless-dev/cursorless/pull/2771), [#2764](https://github.com/cursorless-dev/cursorless/pull/2764))
+- Improved visualizations and feedback for Cursorless commands ([#2771](https://github.com/cursorless-dev/cursorless/pull/2771))
 
 ## 📈 What's next?
 
@@ -69,4 +65,4 @@ Here are the highlights of what we've accomplished:
 - Improving documentation. This is an area where we would really appreciate [contributions](https://github.com/cursorless-dev/cursorless/issues?q=is%3Aissue%20state%3Aopen%20label%3Adocumentation)
 - Cursorless everywhere. We now have users working on Cursorless for multiple new editors. The future for Cursorless everywhere is looking very bright
 
-We'd like to end with a massive thank you to [our sponsors 🎉](https://github.com/sponsors/pokey), without whom Cursorless development would not be possible!
+We'd like to end with a massive thank you to [our sponsors 🎉](https://github.com/sponsors/cursorless), without whom Cursorless development would not be possible!
