--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.0.md
@@ -33,7 +33,7 @@ Here are some highlights:
 ### Community integration
 
 - Deprecated the Cursorless snippets in favor of the [community snippets](https://github.com/talonhub/community/tree/f7e5f9696c7ed6e78e8488c8b7fb1c6bbcc25779/core/snippets) ([#2804](https://github.com/cursorless-dev/cursorless/pull/2804), [#2747](https://github.com/cursorless-dev/cursorless/pull/2747), [#2744](https://github.com/cursorless-dev/cursorless/pull/2744))
-- Added migration tools and instructions for users to switch to community snippets ([#2857](https://github.com/cursorless-dev/cursorless/pull/2857), [#2837](https://github.com/cursorless-dev/cursorless/pull/2837), [#2833](https://github.com/cursorless-dev/cursorless/pull/2833)), ([#2824](https://github.com/cursorless-dev/cursorless/pull/2824)
+- Added migration tools and instructions for users to switch to community snippets ([#2857](https://github.com/cursorless-dev/cursorless/pull/2857), [#2837](https://github.com/cursorless-dev/cursorless/pull/2837), [#2833](https://github.com/cursorless-dev/cursorless/pull/2833), [#2824](https://github.com/cursorless-dev/cursorless/pull/2824))
 
 ### Stability and testing
 
