--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.0.md
@@ -44,7 +44,7 @@ Here are some highlights:
 
 While our main push for the 1.0.0 release was polish, we still managed to squeeze in a few new features:
 
-- Flash targets action ([#2764](https://github.com/cursorless-dev/cursorless/pull/2764)
+- Flash targets action ([#2764](https://github.com/cursorless-dev/cursorless/pull/2764))
 - Add `"append"` action to add a new cursor ([#2707](https://github.com/cursorless-dev/cursorless/pull/2707))
 
 ## 📈 What's next?
