--- a/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.0.md
+++ b/packages/cursorless-org-docs/src/docs/user/release-notes/1.0.0.md
@@ -52,6 +52,6 @@ While our main push for the 1.0.0 release was polish, we still managed to squeez
 - We will continue to improve language definitions. There are still some languages where features are missing or still in legacy form (see above).
 - Improving documentation. This is an area where we would really appreciate [contributions](https://github.com/cursorless-dev/cursorless/issues?q=is%3Aissue%20state%3Aopen%20label%3Adocumentation)
 - Cursorless everywhere. We now have users working on Cursorless for multiple new editors. The future for Cursorless everywhere is looking very bright!
-- Embedded languages, eg js within html, markdown code blocks, vue.js, styled components in js, etc etc. This one is a big effort, so stay tuned.
+- Embedded languages, eg js within html, markdown code blocks, vue.js, styled components in js, etc etc. This one is a big effort, so stay tuned ([#409](https://github.com/cursorless-dev/cursorless/issues/409))
 
 We'd like to end with a massive thank you to [our sponsors 🎉](https://github.com/sponsors/cursorless-dev/), without whom Cursorless development would not be possible!
