--- a/packages/cursorless-org-docs/src/docs/user/languages/scm.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/scm.mdx
@@ -1,3 +1,7 @@
+---
+sidebar_label: Tree sitter query
+---
+
 import { Language } from "./components/Language";
 
 # Tree sitter query language (scm)
