--- a/data/fixtures/recorded/languages/rust/chuckArgAir.yml
+++ b/data/fixtures/recorded/languages/rust/chuckArgAir.yml
@@ -21,9 +21,4 @@ initialState:
     default.a:
       start: {line: 0, character: 10}
       end: {line: 0, character: 11}
-finalState:
-  documentContents: |
-    struct S<'b: 'a, T>;
-  selections:
-    - anchor: {line: 1, character: 0}
-      active: {line: 1, character: 0}
+thrownError: {name: NoContainingScopeError}
