--- a/data/fixtures/recorded/languages/rust/changeArgSun.yml
+++ b/data/fixtures/recorded/languages/rust/changeArgSun.yml
@@ -24,10 +24,4 @@ initialState:
     default.s:
       start: {line: 0, character: 20}
       end: {line: 0, character: 27}
-finalState:
-  documentContents: |-
-    fn some_function<, U: Clone + Debug>(t: &T, u: &U) -> i32 {
-    }
-  selections:
-    - anchor: {line: 0, character: 17}
-      active: {line: 0, character: 17}
+thrownError: {name: NoContainingScopeError}
