--- a/data/fixtures/recorded/languages/rust/changeArgTrap.yml
+++ b/data/fixtures/recorded/languages/rust/changeArgTrap.yml
@@ -21,9 +21,4 @@ initialState:
     default.t:
       start: {line: 0, character: 21}
       end: {line: 0, character: 22}
-finalState:
-  documentContents: |
-    struct S<'a, 'b: 'a, > {};
-  selections:
-    - anchor: {line: 0, character: 21}
-      active: {line: 0, character: 21}
+thrownError: {name: NoContainingScopeError}
