--- a/data/fixtures/recorded/languages/rust/changeArgTrapAndBlueTrap.yml
+++ b/data/fixtures/recorded/languages/rust/changeArgTrapAndBlueTrap.yml
@@ -31,14 +31,4 @@ initialState:
     blue.t:
       start: {line: 0, character: 11}
       end: {line: 0, character: 12}
-finalState:
-  documentContents: |
-    enum Maybe<> {
-        Just(),
-        Nothing,
-    }
-  selections:
-    - anchor: {line: 0, character: 11}
-      active: {line: 0, character: 11}
-    - anchor: {line: 1, character: 9}
-      active: {line: 1, character: 9}
+thrownError: {name: NoContainingScopeError}
