--- a/data/fixtures/recorded/languages/rust/changeArgTrapAndBlueTrap.yml
+++ b/data/fixtures/recorded/languages/rust/changeArgTrapAndBlueTrap.yml
@@ -1,7 +1,7 @@
 languageId: rust
 command:
   version: 6
-  spokenForm: change arg trap and blue trap
+  spokenForm: change type trap and blue trap
   action:
     name: clearAndSetSelection
     target:
@@ -10,7 +10,7 @@ command:
         - type: primitive
           modifiers:
             - type: containingScope
-              scopeType: {type: argumentOrParameter}
+              scopeType: {type: type}
           mark: {type: decoratedSymbol, symbolColor: default, character: t}
         - type: primitive
           mark: {type: decoratedSymbol, symbolColor: blue, character: t}
