More type arguments

--- a/data/fixtures/recorded/languages/rust/chuckArgSun2.yml
+++ b/data/fixtures/recorded/languages/rust/chuckArgSun2.yml
@@ -24,4 +24,10 @@ initialState:
     default.s:
       start: {line: 0, character: 20}
       end: {line: 0, character: 27}
-thrownError: {name: Error}
+finalState:
+  documentContents: |-
+    fn some_function<U: Clone + Debug>(t: &T, u: &U) -> i32 {
+    }
+  selections:
+    - anchor: {line: 1, character: 1}
+      active: {line: 1, character: 1}
