--- a/data/fixtures/recorded/languages/rust/changeTypeTrap3.yml
+++ b/data/fixtures/recorded/languages/rust/changeTypeTrap3.yml
@@ -26,10 +26,10 @@ initialState:
       end: {line: 1, character: 11}
 finalState:
   documentContents: |
-    fn some_function<T, U>(t: &T, u: &U) -> i32
-        where T: ,
+    fn some_function<T, U>(t: &T, u: &U) -> 
+        where T: Display + Clone,
               U: Clone + Debug
     {}
   selections:
-    - anchor: {line: 1, character: 13}
-      active: {line: 1, character: 13}
+    - anchor: {line: 0, character: 40}
+      active: {line: 0, character: 40}
