feat: Add DisplayComponent to typescript.mdx

--- a/packages/cursorless-org-docs/src/docs/user/languages/typescript.mdx
+++ b/packages/cursorless-org-docs/src/docs/user/languages/typescript.mdx
@@ -1,5 +1,7 @@
 import { Language } from "./components/Language";
+import { DisplayComponent } from "./components/DisplayComponent";
 
 # Typescript
 
 <Language languageId="typescript"></Language>
+<DisplayComponent languageId="typescript"></DisplayComponent>
